# mackenzie-scott-qaly

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  SOURCES.md  pyproject.toml
.github/workflows/: ci.yml
data/: parameters.yaml
data/yieldgiving/: README.md  area_map.json  leaf_to_archetype.yaml  match_audit.jsonl  organisations.json  propublica_revenue.jsonl
data/yieldgiving/geo_audit/: .gitignore  geo_audit.jsonl  run.sh  run_sol.sh  sol_targets.jsonl  sol_verdicts.jsonl  targets.jsonl  worker.sh  worker_sol.sh
docs/: index-preview.html  index.embed.ipynb  index.html  index.out.ipynb  index.qmd
docs/_tex/: index.tex  references.bib
docs/review/: DECISION-preview.html  DECISION.md  DECISION.out.ipynb
docs/review/round1/: citations-preview.html  citations.md  citations.out.ipynb  methodology-preview.html  methodology.out.ipynb  neutrality-preview.html  neutrality.out.ipynb  red-team-preview.html  red-team.out.ipynb  reproducibility-preview.html  reproducibility.out.ipynb  response-preview.html  response.out.ipynb
docs/review/round2/: citations-preview.html  citations.md  citations.out.ipynb  methodology-preview.html  methodology.md  methodology.out.ipynb  redteam.md  (+8 more)
paper/: README.md  _quarto.yml  index.qmd
paper/review/: DECISION.md  rendered.txt
results/: summary.json  summary.md
scripts/: audit_matches.py  fetch_propublica.py
src/msqaly/: __init__.py  allocation.py  cli.py  distributions.py  exportparams.py  exportv11.py  exportversions.py  geo.py  model.py  validate.py
tests/: test_allocation.py  test_geo.py  test_model.py  test_validate.py
(+103 files in other folders)
