[project]
name = "msqaly"
version = "0.1.0"
description = "GiveWell-style cost-effectiveness (QALY) model of MacKenzie Scott's lifetime philanthropy"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy>=1.26",
    "pyyaml>=6.0",
    "matplotlib>=3.8",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.scripts]
msqaly = "msqaly.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/msqaly"]
